added sessions controller with login/logout buttons in the application layout

--- a/autowash_scheduler/app/views/auto_washes/show.html.erb
+++ b/autowash_scheduler/app/views/auto_washes/show.html.erb
@@ -4,7 +4,7 @@
   <strong>Location:</strong>
   <%= @auto_wash.location %>
 </p>
-
+<h3>Hours of Operation:</h3>
 <p>
   <strong>Start:</strong>
   <%= @auto_wash.start %>
