--- a/autowash_scheduler/app/views/layouts/application.html.erb
+++ b/autowash_scheduler/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+      <% if current_user %>
+        Signed in as <%= current_user.email %>
+        <%= link_to "Log out", session_path("current"), :method => :delete, :class =>"sign-up" %> 
+      <% else %>
+        <a href="/users/new" class="sign-up">Sign Up</a>
+        <a href="/sessions/new" class="sign-up">Log In</a>
+      <% end %>
+
 <%= yield %>
 
 </body>
