--- a/autowash_scheduler/app/views/auto_washes/show.html.erb
+++ b/autowash_scheduler/app/views/auto_washes/show.html.erb
@@ -1,10 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Location:</strong>
-  <%= @auto_wash.location %>
-</p>
-<h3>Hours of Operation:</h3>
+<h1> Location: </h1>
+  <p><%= @auto_wash.location %></p>
+
+<h1>Hours of Operation:</h1>
 <p>
   <strong>Start:</strong>
   <%= @auto_wash.start %>
@@ -17,3 +16,50 @@
 
 <%= link_to 'Edit', edit_auto_wash_path(@auto_wash) %> |
 <%= link_to 'Back', auto_washes_path %>
+
+<h1>Create a shift</h1>
+
+<%= form_for([@auto_wash, @shift]) do |f| %>
+
+  <div class="field">
+    <%= f.label :shift_start %><br />
+    <%= f.datetime_select :shift_start %>
+  </div>
+  <div class="field">
+    <%= f.label :shift_end %><br />
+    <%= f.datetime_select :shift_end %>
+  </div>
+  <div class="field">
+  	<% if current_user %>
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+    <% end %>
+  </div>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+<% end %>
+
+
+  <% if @shift.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@reservation.errors.count, "error") %> prohibited this product from being saved:</h2>
+
+      <ul>
+      <% @reservation.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+    <% end %>
+<br>
+<h1>
+  <strong>Shifts:</strong>  
+</h1>
+
+<% @employee_shifts.each do |shift| %>
+
+<p>Start Time: <%= shift.shift_start %></p> 
+<p>End Time: <%= shift.shift_end %></p> 
+<p>ID: <%= shift.id %></p>
+<% end %>
